add: メールの文言を編集 #118

--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %>様</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>いつもiroGraphicaをご利用いただきまして誠にありがとうございます。</p>
+
+<p>パスワードの変更手続きが完了したことをご報告いたします。</p>
+
+<p><%= @resource.email %>様のご利用を心よりお待ちしております。</p>
