--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,11 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %>様</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>いつもiroGraphicaをご利用いただきまして誠にありがとうございます。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>パスワードの再設定を承りました。</p>
+<p>お手数ですが、以下のURLから手続きを進めてください。</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= link_to 'パスワード変更手続きはこちら', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+<p>本メールを受け取られましたら、すぐに再設定をおこなってください。</p>
+<p>パスワード変更リンクの有効期限は6時間です。</p>
