--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -12,11 +12,11 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to t('devise.shared.links.sign_up'), new_registration_path(resource_name), class: "link text-[#3F51B5]" %><br />
 <% end %>
-<!-- パスワードリセット機能は本リリース時実装予定
+
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "link text-[#3F51B5]" %><br />
+  <%= link_to "パスワードを忘れた方はこちら", new_password_path(resource_name), class: "link text-[#3F51B5]" %><br />
 <% end %>
--->
+
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "link text-[#3F51B5]" %><br />
 <% end %>
