--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,29 +1,32 @@
-<div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
-  <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10"></h2>
+<div data-controller="loading">
+  <%= render "shared/loading" %>
+  <div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
+    <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10"></h2>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <%= f.hidden_field :reset_password_token %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <%= f.hidden_field :reset_password_token %>
 
-    <div class="field">
-      <%= f.label :password, "New password" %><br />
-      <% if @minimum_password_length %>
-        <%= t('devise.registrations.new.minimum_password_length', password_length: @minimum_password_length) %><br />
-      <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+      <div class="field">
+        <%= f.label :password, "New password" %><br />
+        <% if @minimum_password_length %>
+          <%= t('devise.registrations.new.minimum_password_length', password_length: @minimum_password_length) %><br />
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation, "Confirm new password" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit t('devise.registrations.new.create'), class: "btn btn-secondary mb-6 w-full mx-auto mt-2", data: { action: "click->loading#show" } %>
+      </div>
+    <% end %>
+
+    <div class="text-center">
+      <%= render "devise/shared/links" %>
     </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation, "Confirm new password" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit t('devise.registrations.new.create'), class: "btn btn-secondary mb-6 w-full mx-auto mt-2" %>
-    </div>
-  <% end %>
-
-  <div class="text-center">
-    <%= render "devise/shared/links" %>
   </div>
-</div>
+  </div>
