--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,21 +1,24 @@
-<div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
-  <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10">パスワード再設定</h2>
-  <p class="text-center mb-5">ご登録されたメールアドレスに<br>パスワード再設定用のURLをお送りいたします。</p>
+<div data-controller="loading">
+  <%= render "shared/loading" %>
+  <div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
+    <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10">パスワード再設定</h2>
+    <p class="text-center mb-5">ご登録されたメールアドレスに<br>パスワード再設定用のURLをお送りいたします。</p>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.input_email') %>
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.input_email') %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "送信する", class: "btn btn-secondary mb-6 w-full mx-auto mt-2", data: { action: "click->loading#show" } %>
+      </div>
+    <% end %>
+
+    <div class="text-center">
+      <%= render "devise/shared/links" %>
     </div>
-
-    <div class="actions">
-      <%= f.submit "送信する", class: "btn btn-secondary mb-6 w-full mx-auto mt-2" %>
-    </div>
-  <% end %>
-
-  <div class="text-center">
-    <%= render "devise/shared/links" %>
   </div>
 </div>
