--- a/app/views/devise/passwords/complete_password_change.html.erb
+++ b/app/views/devise/passwords/complete_password_change.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
-  <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10">パスワード再設定</h2>
-  <p class="text-center mb-5">パスワードを再設定しました。</p>
+  <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10"><%= t('devise.passwords.title') %></h2>
+  <div class="text-center mb-5"><%= t('devise.passwords.complete') %></div>
   <div class="text-center">
     <%= link_to t('header.sign_in'), user_session_path, class: "btn btn-secondary mb-6 w-full mx-auto mt-2" %>
   </div>
