--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,8 +1,8 @@
 <div data-controller="loading">
   <%= render "shared/loading" %>
   <div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
-    <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10">パスワード再設定</h2>
-    <p class="text-center mb-5">ご登録されたメールアドレスに<br>パスワード再設定用のURLをお送りいたします。</p>
+    <h2 class="text-[24px] sm:text-5xl font-bold text-center mb-10"><%= t('devise.passwords.title') %></h2>
+    <div class="text-center mb-5"><%= simple_format(t('devise.passwords.password_forget_body')) %></div>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
