--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -2,28 +2,35 @@
   <%= render "shared/loading" %>
   <div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
     <h1 class="text-[24px] sm:text-5xl font-bold text-center mb-10"><%= t('users.setting.title') %></h1>
-
-    <%= form_with model: @user, url: update_settings_path do |f| %>
-      <%= render "devise/shared/error_messages", resource: current_user %>
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
-      </div>
-      <div class="field">
-        <%= f.label :password %><br />
-        <%= f.password_field :password, :autocomplete => "off", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.minimum_password_length', password_length: 6)  %>
-      </div>
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.re_input_password') %>
-      </div>
-      <div class="field">
-        <%= f.label :current_password %><br />
-        <%= f.password_field :current_password, class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
-      </div>
-      <div class="action_container">
-        <%= f.submit nil, class: "btn btn-secondary mb-6 w-full mx-auto mt-2", data: { action: "click->loading#show" } %>
-      </div>
+    <% if @user.provider.blank? %>
+      <%= form_with model: @user, url: update_settings_path do |f| %>
+        <%= render "devise/shared/error_messages", resource: current_user %>
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+        </div>
+        <div class="field">
+          <%= f.label :password %><br />
+          <%= f.password_field :password, :autocomplete => "off", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.minimum_password_length', password_length: 6)  %>
+        </div>
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('devise.registrations.new.re_input_password') %>
+        </div>
+        <div class="field">
+          <%= f.label :current_password %><br />
+          <%= f.password_field :current_password, class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+        </div>
+        <div class="action_container">
+          <%= f.submit nil, class: "btn btn-secondary mb-6 w-full mx-auto mt-2", data: { action: "click->loading#show" } %>
+        </div>
+      <% end %>
     <% end %>
+  </div>
+  <div class="mx-auto w-full sm:w-[540px] px-10 mt-8">
+    <h3 class="text-lg sm:text-lg font-bold text-center">アカウント削除</h3>
+    <div>
+      <%= button_to "アカウントを削除する", user_registration_path, class: "btn btn-error mb-6 w-full mx-auto mt-2", data: { confirm: "アカウントを削除しますか？", turbo_confirm: "アカウントを削除しますか？" }, method: :delete %>
+    </div>
   </div>
 </div>
