--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -69,7 +69,7 @@
         <%= f.text_field :pen, class: "input input-bordered form-control mb-6 w-full mx-auto pl-2 text-base" %>
       </div>
     </div>
-    <%= f.submit nil, class: "btn btn-secondary w-full mx-auto mt-2", data: { action: "click->loading#show" } %>
+    <%= f.submit nil, class: "btn btn-secondary w-full mx-auto mt-2", data: { action: "click->loading#show" }, id: "submit" %>
   <% end %>
   <%= turbo_frame_tag "remote_modal" %>
 </div>
