--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "reviews" do %>
-  <div class="flex flex-wrap justify-center items-center p-5 gap-5">
+  <div class="flex flex-wrap justify-center items-center px-5 sm:p-5 gap-5">
     <% if @reviews.present? %>
       <%= render @reviews %>
     <% else %>
