--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -6,13 +6,13 @@
       <%= simple_format(t('home.copywriting')) %>
     </div>
   </div>
-  <div class="flex flex-wrap justify-center items-center gap-4 pt-32 sm:pt-2 mb-10">
+  <div class="flex flex-wrap justify-center items-center gap-4 pt-2 mb-5 sm:mb-10">
     <p><%= t('search.category') %></p>
     <% @category.each do |c| %>
       <%= link_to c.color, search_products_path(c: c.id), class: "link" %>
     <% end %>
   </div>
-  <h1 class="text-[32px] sm:text-5xl font-bold text-center mb-10 tracking-wider"><%= t('home.see_review') %></h1>
+  <h1 class="text-2xl sm:text-5xl font-bold text-center sm:mb-10 tracking-wider"><%= t('home.see_review') %></h1>
   <%= turbo_frame_tag "reviews", src: reviews_path, loading: :lazy do %>
     <%= render "shared/skeleton_card" %>
   <% end %>
