fix:モバイルヘッダーを表示する画面サイズを変更
タブレット等一部端末でPC版のヘッダーが表示されておりデザインが崩れていたので、
モバイル用ヘッダーを表示する画面サイズを変更。

#251

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="hidden sm:block">
+<div class="hidden lg:block">
   <div class="navbar bg-base-100 border-b border-primary h-[70px]">
     <div class="navbar-start">
       <%= link_to '/', class: "text-lg" do %>
