--- a/app/views/layouts/_mobile_header.html.erb
+++ b/app/views/layouts/_mobile_header.html.erb
@@ -1,4 +1,4 @@
-<div class="block sm:hidden">
+<div class="block lg:hidden">
   <div class="navbar bg-base-100 border-b border-primary h-[70px]">
     <div class="navbar-start">
       <div data-controller="slideover">
