--- a/app/views/reviews/search.html.erb
+++ b/app/views/reviews/search.html.erb
@@ -2,6 +2,13 @@
   <%= render 'shared/search_tab' %>
   <% if turbo_frame_request? %>
     <%= turbo_frame_tag "search_reviews" do %>
+      <div class="flex justify-center"> 
+        <%= link_to "新着順", search_reviews_path(q: params[:q], c: params[:c], latest: true) %>
+        <span class="w-[1px] bg-black mx-2"></span>
+        <%= link_to "投稿順", search_reviews_path(q: params[:q], c: params[:c], old: true) %>
+        <span class="w-[1px] bg-black mx-2"></span>
+        <%= link_to "人気順", search_reviews_path(q: params[:q], c: params[:c], likes: true) %>
+      </div>
       <div class="flex flex-wrap justify-center items-center p-5 gap-5">
         <% if @reviews.present? %>
           <%= render @reviews %>
