--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -53,7 +53,7 @@
             </div>
             <p class="leading-relaxed whitespace-pre-wrap"><%= @review.body %></p>
             <div class="mt-6 items-center pb-5 border-t-2 border-gray-100 mb-5">
-              <%= link_to product_path(@review.product.id), class: "link text-[#3F51B5]", data: { turbo_frame: "_top" } do %>
+              <%= link_to product_path(@review.product.id, latest: true), class: "link text-[#3F51B5]", data: { turbo_frame: "_top" } do %>
                 <p><%= @review.product.brand.name %><%= @review.product.name %></p>
               <% end %>
               <p><%= t('reviews.show.using_paper') %><%= @review.paper %></p>
