--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -6,7 +6,7 @@
       <%= simple_format(t('home.copywriting')) %>
     </div>
   </div>
-  <div class="flex flex-wrap justify-center items-center gap-4 pt-2 mb-5 sm:mb-10">
+  <div class="flex flex-wrap justify-center items-center gap-2 sm:gap-4 pt-2 mb-2 sm:mb-10">
     <p><%= t('search.category') %></p>
     <% @category.each do |c| %>
       <%= link_to c.color, search_products_path(c: c.id), class: "link" %>
