--- a/app/views/reviews/_like.html.erb
+++ b/app/views/reviews/_like.html.erb
@@ -1,3 +1,3 @@
-<%= link_to review_like_path(review), id: "like-btn-for-review-#{review.id}", data: { turbo_method: :post } do %>
+<%= link_to review_like_path(review), id: "like-btn-for-review-#{review.id}", data: { turbo_method: :post, turbo_frame: "_top" } do %>
   <i class="fa-regular fa-heart"></i>
 <% end %>
