--- a/app/views/reviews/_unlike.html.erb
+++ b/app/views/reviews/_unlike.html.erb
@@ -1,3 +1,3 @@
-<%= link_to review_like_path(review), id: "unlike-btn-for-review-#{review.id}", data: { turbo_method: :delete } do %>
+<%= link_to review_like_path(review), id: "unlike-btn-for-review-#{review.id}", data: { turbo_method: :delete, turbo_frame: "_top" } do %>
   <i class="fa-solid fa-heart"></i>
 <% end %>
