--- a/app/views/reviews/_bookmark.html.erb
+++ b/app/views/reviews/_bookmark.html.erb
@@ -1,3 +1,3 @@
-<%= link_to bookmarks_path(review_id: review.id), id: "bookmark-btn-for-review-#{review.id}", data: { turbo_method: :post } do %>
+<%= link_to bookmarks_path(review_id: review.id), id: "bookmark-btn-for-review-#{review.id}", data: { turbo_method: :post, turbo_frame: "_top" } do %>
   <i class="fa-regular fa-bookmark"></i>
 <% end %>
