fix: copilotからの指摘箇所を修正
fix_product_names.rb：Like→LIKEに修正。
products/show.html.erb：nofolloe→nofollowに修正。
rakuten_search_controller.js：redioButton→radioButtonに修正。
検索結果表示前に既存の検索結果をリセットするコードを追加。
変数resultUrl、resultImage、resultNameを追加してresultListHtml内のHTMLが簡潔になるように修正。
compose.yml：cashed→cachedに修正。
config/initializers/rakuten.rb：開発環境でのみデバックモードを使用するように修正。
20250816085424_add_rakuten_colum_to_products.rbへの指摘に対しては、マイグレーションファイルなので修正なし。
（ファイル名の誤字修正なので修正なしにします）

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
       <div class="flex flex-wrap justify-center items-center">
         <div class="flex justify-center items-center sm:mx-4 my-5 sm:my-0">
           <% if @product.productUrl.present? %>
-            <%= link_to "楽天で見る", @product.productUrl, class: "btn btn-wide bg-[#B31B22] hover:bg-[#87141a] text-white text-[20px]", target: :_blank, rel: "noopener noreferrer nofolloe" %>
+            <%= link_to "楽天で見る", @product.productUrl, class: "btn btn-wide bg-[#B31B22] hover:bg-[#87141a] text-white text-[20px]", target: :_blank, rel: "noopener noreferrer nofollow" %>
           <% end %>
         </div>
         <div class="flex justify-center items-center sm:mx-1 my-1 sm:my-0">
