--- a/app/views/reviews/_like_count.html.erb
+++ b/app/views/reviews/_like_count.html.erb
@@ -1,1 +1,1 @@
-<p class="text-xs -mt-1" id="like-count-<%= review.id %>"><%= review.likes.count %></p>
+<p class="text-xs -mt-1" id="like-count-<%= review.id %>"><%= review.likes_count %></p>
