--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,4 +1,4 @@
-<ul class="menu bg-base-100 rounded-box w-1/3">
+<ul class="menu bg-base-100 rounded-box w-max sm:w-1/3 px-0 sm:px-5">
   <li>
     <% if @brands.present? %>
       <% @brands.each do |brand| %>
