add: メーカー一覧へのリンク設置
メーカー一覧ページへのリンクをヘッダーとトップページに追加しました。
併せてデザインも一部修正して表示を調整しています。

#312

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
       <% end %>
     </div>
     <div class="navbar-center">
+      <%= link_to "メーカーから探す", brands_path, class: "link px-2" %>
       <%= render 'shared/search_form', url: search_reviews_path %>
     </div>
     <div class="navbar-end">
