--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,4 @@
-<div class="card sm:card-side m-4 shadow" id="review-<%= review.id %>">
+<div class="card sm:card-side mx-4 my-2 shadow" id="review-<%= review.id %>">
   <div class="px-10 sm:px-4 pt-4 sm:py-4 sm:relative">
     <% if review.images.attached? %>
       <%= image_tag review.images[0], class: "h-[170px] w-[170px] rounded-lg" %>
