--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -12,7 +12,7 @@
         </details>
       <% end %>
     <% else %>
-      <div>メーカーがありません</div>
+      <div><%= t('brand.index.without_brand') %></div>
     <% end %>
   </li>
 </ul>
