add: Copilotの指摘部分修正
app/views/brands/index.html.erbを修正しました。
・HTMLのID属性brand-nameとproduct-nameにそれぞれbrand.idとproduct.idを付与して一意のIDになるように修正しました。
・上記変更にあわせてテストのコードも修正しました。
・countメソッドを使用している部分をsizeメソッドに変更しました。

#312

--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -3,10 +3,10 @@
     <% if @brands.present? %>
       <% @brands.each do |brand| %>
         <details>
-          <summary id="brand-name"><%= brand.name %>（<%= brand.products.count %>）</summary>
+          <summary id="brand-name-<%= brand.id %>"><%= brand.name %>（<%= brand.products.size %>）</summary>
           <ul>
             <% brand.products.order(:id).each do |product| %>
-              <li><%= link_to "#{product.name}（#{product.reviews.count}）", product_path(product), id: "product-name", class: "link link-primary" %></li>
+              <li><%= link_to "#{product.name}（#{product.reviews.size}）", product_path(product), id: "product-name-#{product.id}", class: "link link-primary" %></li>
             <% end %>
           </ul>
         </details>
