fix: 画像の添付枚数表示をキャッシュ用カラムを使用して表示するように変更
ActiveStorageではcounter_cacheを使用することが出来なかったので、
Reviewに画像枚数をキャッシュしておくカラムを作成
after_commitコールバックで投稿・編集時に画像枚数を調べて上記カラムに保存
viewでは上記カラムの値を表示する
ように対応しました。
画像枚数に変更がなかったときにはコールバックが発火しないように、
現在の画像添付枚数とカラムの値を比較して変更があった場合のみカラムの値を更新するようにしています。

#320

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -5,9 +5,9 @@
     <% else %>
       <%= image_tag 'kkrn_icon_shashin_3.png', class: "h-[170px] w-[170px] rounded-lg object-fit" %>
     <% end %>
-    <% if review.images.count > 1 %>
+    <% if review.images_count > 1 %>
       <div class=" bg-black bg-opacity-50 absolute top-4 right-10 sm:right-4 rounded-tr-lg rounded-bl-lg px-2">
-        <p class="text-white"><i class="fa-solid fa-images"></i> <%= review.images.count %></p>
+        <p class="text-white"><i class="fa-solid fa-images"></i> <%= review.images_count %></p>
       </div>
     <% end %>
     <div class="card-actions sm:justify-end mt-1">
