add: ページネーション対応が漏れていた部分にページネーションを追加
ページネーションが漏れていた部分にページネーション対応を追加しました。

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -7,5 +7,6 @@
         <%= t('notifications.no_notice') %>
       <% end %>
     </div>
+    <%= render "shared/load_more_button" %>
   </div>
 <% end %>
