add: プレビュー機能を作成
Stimulusを使って画像のプレビュー表示機能を作成しました。
JSで表示するプレビューのHTMLをclosestで指定できるように、新規画像プレビュー用の独自クラス（new-image-wrapper）を作成しています。
また、新規画像を配列で保持してファイル選択を開きなおしても選択画像が上書きされないようにしています。

#317

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -19,6 +19,9 @@
   .not_active_tabs {
     @apply border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300
   }
+  .new-image-wrapper {
+    @apply flex flex-col items-center justify-center;
+  }
 }
 
 dialog.slideover[open] {
