--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="product loading">
+<div data-controller="product loading preview-images">
   <%= render "shared/loading" %>
   <%= form_with(model: review, data: { controller: 'nested-form', nested_form_wrapper_selector_value: '.nested-form-wrapper' }, class: "w-full max-w-lg") do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
@@ -11,9 +11,9 @@
     <div class="flex flex-wrap -mx-3 mb-4">
       <div class="w-full px-3">
         <%= f.label :images, class: "px-3" %><%= t('reviews.form.number_of_images') %>
-        <%= f.file_field :images, accept: "image/jpeg,image/png", class: "file-input file-input-bordered w-full mx-auto", multiple: true, include_hidden: false %>
-        <% if @review.images.attached? %>
-          <div class="flex mx-2 mt-2 gap-[24px] items-center justify-center">
+        <%= f.file_field :images, accept: "image/jpeg,image/png", class: "file-input file-input-bordered w-full mx-auto", multiple: true, include_hidden: false, data: { preview_images_target: "input", action: "change->preview-images#preview" } %>
+        <div class="flex mx-2 mt-2 gap-[24px] items-center justify-center" data-preview-images-target="previewContainer">
+          <% if @review.images.attached? %>
             <% @review.images.each do |image| %>
               <div class ="flex flex-col items-center justify-center">
                 <%= image_tag image, class: "w-[60px] sm:w-[80px] h-[60px] sm:h-[80px] object-fill object-center" %>
@@ -22,8 +22,8 @@
                 <% end %>
               </div>
             <% end %>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-4">
